--- a/en/films.html
+++ b/en/films.html
@@ -176,7 +176,7 @@
 
             <a href="/en/director.html" class="page__article--btn">
                 Peter Jackson
-                <img src="/public/icones/chevron_right.svg" alt="fleche">
+                <img src="/public/icones/chevron_right.svg" alt="arrow">
             </a>
         </article>
     </main>
