modif json et trad

--- a/en/director.html
+++ b/en/director.html
@@ -150,7 +150,7 @@
             </h2>
             <div class="gallerie" x-data="{
                 async parcFilm () {
-                    const resp = await fetch('/json/info_films.json');
+                    const resp = await fetch('/json/info_film_en.json');
                     return await resp.json();
                     },
                 }">
