traduction page musique

--- a/en/music.html
+++ b/en/music.html
@@ -109,6 +109,52 @@
 
 
 
+    <main class="page">
+        <header class="page__header">
+            <img src="/public/img/accueil.webp" alt="image hobbit hole" class="page__header--img">
+            <h1 class="page__header--titre">
+                The Shire
+            </h1>
+        </header>
+        <article class="page__article">
+            <h2 class="page__header--chapo">
+                A film without music loses 70% of its value
+            </h2>
+            <img 
+                src="/public/img/howard_shore.webp" 
+                alt="image Howard Shore"
+                class="page__article--image">
+            <p class="media__descriptif">Howard Shore - Genius composer</p>
+            <p class="page__article--texte">
+                A large part of what makes a film what it is is its music, which gives the film a sonic identity and helps to convey feelings and amplify them. 
+                And this is the case with The Lord of the Rings, where Howard Shore, the composer, has done a monstrous and quite simply magnificent job. 
+                A simple piece of music makes epic work of three actors running across a field and shots or drone footage flying over the mountains.
+            </p>
+            
+
+
+            <div class="citation">
+                <q 
+                    class="citation__texte"
+                    cite="https://lotr.fandom.com/fr/wiki/Peter_Jackson">
+                    I think the music I composed was faithful to Tolkien and sincere. It came from the heart. And I think it spoke and continues to speak to people who love the 'Lord of the Rings' books and films.
+                </q>
+                <p class="citation__auteur">- Howard Shore -</p>
+            </div>
+            <p class="page__article--texte">
+                Probably the best-known piece of music is from the county: The Shire. 
+                This music is the perfect example of one that transmits emotions. When I hear it, I'm immediately reminded of the happy, peaceful aspect of the county thanks to the calm, pleasant notes of the violins that give it a light tone. 
+                When you hear it, you know you're transported to a fantasy world, not a real or 'futuristic' one like Hans Zimmer's music for Inception or Interstellar. It is this characteristic style that defines Howard Shore's work and the films, with certain pieces recalling others. 
+                At the beginning, for example, there's a less epic version of "Balin's tomb", but it gives a foretaste of the aural pleasure to be had in one of the most impressive scenes in the first film.
+            </p>
+            <a href="/en/books.html" class="page__article--btn">
+                Tolkien et ses livres
+                <img src="/public/icones/chevron_right.svg" alt="arrow">
+            </a>
+        </article>
+        
+
+    </main>
 
 
 
