rajout trad bouton

--- a/en/music.html
+++ b/en/music.html
@@ -148,7 +148,7 @@
                 At the beginning, for example, there's a less epic version of "Balin's tomb", but it gives a foretaste of the aural pleasure to be had in one of the most impressive scenes in the first film.
             </p>
             <a href="/en/books.html" class="page__article--btn">
-                Tolkien et ses livres
+                Tolkien and is books
                 <img src="/public/icones/chevron_right.svg" alt="arrow">
             </a>
         </article>
