--- a/en/books.html
+++ b/en/books.html
@@ -333,7 +333,7 @@
                 </ul>
             </div>    
 
-            <a href="/fr/anecdotes.html" class="page__article--btn">
+            <a href="/en/fun_facts.html" class="page__article--btn">
                 Some fun-facts
                 <img src="/public/icones/chevron_right.svg" alt="arrow">
             </a>
