trad page anecdote

--- a/en/fun_facts.html
+++ b/en/fun_facts.html
@@ -107,7 +107,126 @@
         </div>
     </header>
 
+    <main class="page">
+        <header class="page__header">
+            <img src="/public/img/accueil.webp" alt="image hobbit hole" class="page__header--img">
+            <h1 class="page__header--titre">
+                Fun Facts
+            </h1>
+        </header>
 
+        <article class="page__article">
+            <h2 class="page__header--chapo">
+                As with every film, there are plenty of anecdotes to go with it, both on and off the set. 
+                Here's a compilation of our favourite anecdotes, some more well-known than others.
+            </h2>
+            <div class="box">
+                <img 
+                    src="/public/img/image_aragorn_pied.webp" 
+                    alt="aragorn broke is toe"
+                    class="box__img">
+                <div class="box__texte">
+                    <p class="media__descriptif">
+                        Aragorn - The two towers
+                    </p>
+                    <p class="box__texte--fact">
+                        It's probably the best-known anecdote, but how can you miss it? In the second film, Aragorn is angry and shoots into a helmet and screams, and for a good reason. In fact, Viggo Mortensen, the actor, has broken his toe, so it's a real cry of pain that he's uttering, not just "acting".
+                    </p>
+                </div>
+            </div>
+            <div class="box">
+                <img 
+                    src="/public/img/image_aragorn_epee.webp" 
+                    alt="aragorn and is sword"
+                    class="box__img">
+                <div class="box__texte">
+                    <p class="media__descriptif">
+                        Aragorn - The return of the king
+                    </p>
+                    <p class="box__texte--fact">
+                        Viggo Mortensen insisted on having a real sword and not an accessory on the set to better fit his role.As well as being considered his best pupil by Bob Anderson, the master swordsman, it saved his life, because during a scene in which an orca throws a knife, the disguised professional misses. Viggo only just counters the knife and saves his own life.
+                    </p>
+                </div>
+            </div>
+            <div class="box">
+                <img 
+                    src="/public/img/image_theoden.webp" 
+                    alt="Theoden"
+                    class="box__img">
+                <div class="box__texte">
+                    <p class="media__descriptif">
+                        Theoden - The return of the king
+                    </p>
+                    <p class="box__texte--fact">
+                        Bernard Hill, the actor who played King Theoden, also starred in Titanic. He is therefore indirectly the most Oscar-winning actor, as he is the only one to have played in two of the three most Oscar-winning films (11 Oscars), the last being Ben-Hur.
+                    </p>
+                </div>
+            </div>
+            <div class="box">
+                <img 
+                    src="/public/img/image_saruman1.webp" 
+                    alt="Saruman"
+                    class="box__img">
+                <div class="box__texte">
+                    <p class="media__descriptif">
+                        Saruman - The fellowship of the ring
+                    </p>
+                    <p class="box__texte--fact">
+                        Christopher Lee [Saruman] is the only person on the set to have met Tolkien in person. Tolkien had given him a letter signed by him saying that if one day there were films, he should have the role of Gandalf. However, Peter Jackson completely ignored the letter and gave him the role of Saruman, which we don't regret.
+                    </p>
+                </div>
+            </div>
+            <div class="box">
+                <img 
+                    src="/public/img/image_saruman1.webp" 
+                    alt="Saruman"
+                    class="box__img">
+                <div class="box__texte">
+                    <p class="media__descriptif">
+                        Saruman - The fellowship of the ring
+                    </p>
+                    <p class="box__texte--fact">
+                        Yes, one anecdote wasn't enough! During the making of the films, Christopher Lee always carried around the Lord of the Rings books and corrected any mistakes he spotted. It should be pointed out that for several years he had been in the habit of reading the books at least once a year.
+                    </p>
+                </div>
+            </div>
+            <div class="box">
+                <img 
+                    src="/public/img/image_sean_bean.webp" 
+                    alt="Sean Bean"
+                    class="box__img">
+                <div class="box__texte">
+                    <p class="media__descriptif">
+                        Sean Bean [Boromir]
+                    </p>
+                    <p class="box__texte--fact">
+                        Sean Bean [Boromir] has a huge fear of aeroplanes/helicopters. Problem? To get to some of the filming locations in the mountains, the crew had to use this means of transport. So he had to walk for several hours with his equipment to reach them.
+                    </p>
+                </div>
+            </div>
+            <div class="box">
+                <img 
+                    src="/public/img/image_boromir_mordor.webp" 
+                    alt="Boromir"
+                    class="box__img">
+                <div class="box__texte">
+                    <p class="media__descriptif">
+                        Boromir - The fellowship of the ring
+                    </p>
+                    <p class="box__texte--fact">
+                        And finally, one last anecdote to finish on a high note! When Sean Bean says his line "Mordor isn't so easy to get into", he's looking down. In reality, he has the script on his legs and is reading it because the script changed every day and he didn't have time to learn it.
+                    </p>
+                </div>
+            </div>
+
+            <a href="/en/meme.html" class="page__article--btn">
+                Some memes
+                <img src="/public/icones/chevron_right.svg" alt="arrow">
+            </a>
+
+        </article>
+
+    </main>
 
 
 
