trad page differences

--- a/en/differences.html
+++ b/en/differences.html
@@ -107,7 +107,92 @@
         </div>
     </header>
 
+    <main class="page">
+        <header class="page__header">
+            <img src="/public/img/accueil.webp" alt="image hobbit hole"  class="page__header--img">
+            <h1 class="page__header--titre">
+                Differences <br>
+                Books / Films            
+            </h1>           
+        </header>
 
+        <article class="page__article">
+            <h2 class="page__header--chapo">
+                Each adaptation has its share of differences, as adapting such a substantial work requires making concessions and slight modifications. For example, the first version of the Fellowship of the Ring lasted 5 hours and had to be shortened. That's why we've put together a list of some of the major differences, additions and deletions between the books and the films.            
+            </h2>
+            <div class="box">
+                <img 
+                    src="/public/img/tom_bombadil.webp" 
+                    alt="Tom Bombadil"
+                    class="box__img">
+                <div class="box__texte">    
+                    <p class="media__descriptif">
+                        Illustration of Tom Bombadil
+                    </p>
+                    <p class="box__texte--fact">
+                        Tom Bombadil, one of the greatest mysteries in books. When Frodo, Sam, Pippin and Merry meet him, we learn that he has existed since time immemorial, longer than anyone can imagine. We also realise that the ring has no impact on him, and that he is a super-powered magical being who prefers to live a simple life in his forest. For readers, his absence is a shame, but it makes sense because in a film this passage would have lasted a long time and would have confused the viewer more than adding anything to the story, given the complexity of the character.
+                    </p>
+                </div>
+            </div>
+            <div class="box">
+                <img 
+                    src="/public/img/gouffre_helm.webp" 
+                    alt="helm's deep"
+                    class="box__img">
+                <div class="box__texte">    
+                    <p class="media__descriptif">
+                        Helm's deep - The two towers
+                    </p>
+                    <p class="box__texte--fact">
+                        We all have this memory of the battle of the abyss of Helm, with the men stuck in the fort, and the elves who come to help them. And yet, in the books, they do not come. In the book, the battle is therefore more intense because of the number of fighters that is then divided by two. But we are not going to lie, it offers a very beautiful spectacle for the eyes.
+                    </p>
+                </div>
+            </div>
+            <div class="box">
+                <img 
+                    src="/public/img/image_beacons.webp" 
+                    alt="beacons"
+                    class="box__img">
+                <div class="box__texte">    
+                    <p class="media__descriptif">
+                        Beacons - The Return of the King
+                    </p>
+                    <p class="box__texte--fact">
+                        For me one of the most beautiful scenes of the movies, when Pippin lights the alarm lights and we travel the mountains to follow the signal spread and ask for help, all on an epic music. In reality this scene would not have to take place because the alarm lights are already on before Pippin and Gandalf arrive in Minas Tirith. Without wanting to lie, this modification was loved by most fans for its beauty and Peter Jackson’s demonstration of talent to make love sequences with only landscapes.
+                    </p>
+                </div>
+            </div>
+            <div class="box">
+                <img 
+                    src="/public/img/hobbiton.webp" 
+                    alt="hobbiton"
+                    class="box__img">
+                <div class="box__texte">    
+                    <p class="media__descriptif">
+                        Village of Hobbitbourg
+                    </p>
+                    <p class="box__texte--fact">
+                        The end of the lord of the rings in the movies and very joyful, and yet another war is not mentioned but present in the books: that of the county. In the books, Saruman, after the battle in Isengard, fled and joined the county to enslave her while the community fought in Gondor. It is on their return that the hobbits will launch a revolt and regain control of their country and Saruman will be betrayed and killed by Grima. Given the length of this passage in the book I do not dare to imagine in film, especially since it would have given a bizarre rendering to the film with a story after the end of the main.
+                    </p>
+                </div>
+            </div>
+            <div class="box">
+                <img 
+                    src="/public/img/image_grey_havens.webp" 
+                    alt="grey havens"
+                    class="box__img">
+                <div class="box__texte">    
+                    <p class="media__descriptif">
+                        Grey Havens - The Return of the King
+                    </p>
+                    <p class="box__texte--fact">
+                        To finish these differences, let’s talk about one of the very last scenes, with Frodo’s farewell and the beginning of his journey. This is more of a bonus information but in the books, Tolkien tells us that later, Sam receives permission and joins Frodon in Valinor. They will then be joined by Gimli and Legolas.
+                    </p>
+                </div>
+            </div>
+        </article>
+
+    </main>
 
 
 
