trad page autres projets

--- a/en/about.html
+++ b/en/about.html
@@ -107,7 +107,29 @@
         </div>
     </header>
 
+    <main class="page">
+        <header class="page__header">
+            <img src="/public/img/accueil.webp" alt="image hobbit hole" class="page__header--img">
+            <h1 class="page__header--titre">
+                About
+            </h1>
+        </header>
 
+        <article class="page__article">
+            <h2 class="page__header--chapo">
+                Who am I? And why this project ?
+            </h2>
+            <p class="page__article--texte">
+                Roy Jérémy, I am a 1st year student of MMI (Métiers du Multimédia et de l'Internet) in Montbéliard and had for project the design of a site around a replica of my choice and many elements around the film, the director, a music and a book. 
+                Great enthusiast of the lord of the rings and connoisseur of everything that revolves around movies/ books, the choice was easy and all traced. Feel free to visit the sites of my comrades in the other projects section just below !
+            </p>
+            <a href="/en/other_projects.html" class="page__article--btn">
+                Other projects
+                <img src="/public/icones/chevron_right.svg" alt="arrow">
+            </a>
+        </article>  
+
+    </main>
 
 
     
