changement liens langue

--- a/en/contact.html
+++ b/en/contact.html
@@ -20,7 +20,7 @@
             </a>
         </div>
         <div class="header__bande">
-            <a href="/fr/index.html" class="header__bande--langue">
+            <a href="/fr/contact.html" class="header__bande--langue">
                 fr
             </a>
         </div>
