--- a/fr/realisateur.html
+++ b/fr/realisateur.html
@@ -22,7 +22,7 @@
             </a>
         </div>
         <div class="header__bande">
-            <a href="/en/index.html" class="header__bande--langue">
+            <a href="/en/director.html" class="header__bande--langue">
                 en
             </a>
         </div>
