--- a/fr/a_propos.html
+++ b/fr/a_propos.html
@@ -20,7 +20,7 @@
             </a>
         </div>
         <div class="header__bande">
-            <a href="/en/index.html" class="header__bande--langue">
+            <a href="/en/about.html" class="header__bande--langue">
                 en
             </a>
         </div>
