--- a/fr/autres_projets.html
+++ b/fr/autres_projets.html
@@ -21,7 +21,7 @@
             </a>
         </div>
         <div class="header__bande">
-            <a href="/en/index.html" class="header__bande--langue">
+            <a href="/en/other_projects.html" class="header__bande--langue">
                 en
             </a>
         </div>
