--- a/fr/differences.html
+++ b/fr/differences.html
@@ -21,7 +21,7 @@ je suis un f-, humain
             </a>
         </div>
         <div class="header__bande">
-            <a href="/en/index.html" class="header__bande--langue">
+            <a href="/en/differences.html" class="header__bande--langue">
                 en
             </a>
         </div>
