--- a/fr/livres.html
+++ b/fr/livres.html
@@ -25,7 +25,7 @@
             </a>
         </div>
         <div class="header__bande">
-            <a href="/en/index.html" class="header__bande--langue">
+            <a href="/en/books.html" class="header__bande--langue">
                 en
             </a>
         </div>
