--- a/en/films.html
+++ b/en/films.html
@@ -148,7 +148,7 @@
                 src="/public/img/hobbiton.webp" 
                 alt="image of the shire"
                 class="page__article--image">
-            <p class="media__descriptif">Vilage of HobbitBourg</p>
+            <p class="media__descriptif">Village of Hobbiton</p>
             
             <p class="page__article--texte">
                 Peter Jackson, a New Zealander by birth, turned to the locations of his native land for as much realism as possible, thanks to the geography of the island with its mountains, plains and forests. 
