--- a/en/line.html
+++ b/en/line.html
@@ -146,7 +146,7 @@
                 It's a scene that always makes you smile because of the lightness it brings to the film and serves to accentuate the immersion in the story.
             </p>
             <a href="/en/films.html" class="page__article--btn">
-                Les films
+                Films
                 <img src="/public/icones/chevron_right.svg" alt="arrow">
             </a>
         </article>
